# streamax

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  brand.html  build.rs  index.html  privacy.html  security.html  terms.html
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: branch-protection.yml  dependency-review.yml  release.yml
crates/compiler/: Cargo.toml
crates/core/: Cargo.toml
crates/runtime/: Cargo.toml
crates/tools/: Cargo.toml
docs/: README.md  api-reference.md  architecture.md  best-practices.md  caching.md  cross-chain.md  debugging.md  error-handling.md  gas-optimization.md  getting-started.md  guide.md  hot-reloading.md  ide-support.md  testing-framework.md  type-system.md  validation.md  verification.md  zk-proofs.md
docs/theme/: styles.css
examples/bridge/: README.md  cross_chain_token.strx
examples/defi/: README.md  liquidity_pool.strx
examples/governance/: README.md  dao.strx
examples/nft/: README.md  advanced_nft.strx  marketplace.strx  nft_staking.strx
scripts/: install.sh  test_runner.sh
src/compiler/: ast.rs  ir.rs  lexer.rs  main.rs  parser.rs  type_checker.rs
src/core/: error.rs  memory.rs  mod.rs  module.rs
src/core/module/: cache.rs  cache_opt.rs  concurrent.rs  error.rs  hot_reload.rs  loader.rs  mod.rs  resolver.rs  tests.rs  types.rs  validation.rs
src/core/types/: mod.rs
src/docs/: LANGUAGE_SPEC.md
src/examples/: simple_token.rs
src/runtime/: instructions.rs  mod.rs  vm.rs
src/security/: mod.rs  model_checker.rs  solver.rs  symbolic.rs
src/stdlib/blockchain/: mod.rs
src/stdlib/bridge/: mod.rs
src/stdlib/collections/: mod.rs
src/stdlib/core/: convert.rs  crypto.rs  events.rs  gas.rs  math.rs  mod.rs  time.rs
src/stdlib/crypto/: mod.rs
src/stdlib/testing/: mod.rs
src/stdlib/verification/: mod.rs
src/testing/: mod.rs
src/testing/blockchain/: mod.rs
src/testing/contracts/: mod.rs
src/testing/vm/: mod.rs
src/tools/debugger/: mod.rs
src/tools/ide/: mod.rs
src/tools/ide/themes/: dark.rs
src/tools/package_manager/: mod.rs  workspace.rs
src/vm/: main.rs
tests/: config.toml
tests/examples/: token_test.rs
theme/: styles.css
tools/: test-runner.sh
website/: careers.html  index.html  roadmap.html
