[package]
name = "stremax-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Stremax Team"]
description = "Compiler for the Stremax programming language"
license = "Apache-2.0"

[dependencies]
stremax-core = { path = "../core", version = "0.1.0" }

# Parser and lexer
lalrpop-util = "0.20"
logos = "0.13"
chumsky = "0.9"

# Code generation
cranelift = "0.100"
cranelift-module = "0.100"
cranelift-jit = "0.100"
wasmtime = { version = "14.0", features = ["cranelift"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
lalrpop = "0.20"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
test-case = "3.3"
pretty_assertions = "1.4"

[[bin]]
name = "strxc"
path = "src/main.rs" 