[package]
name = "stremax-core"
version = "0.1.0"
edition = "2021"
authors = ["Stremax Team"]
description = "Core components of the Stremax programming language"
license = "Apache-2.0"

[dependencies]
# Cryptography
sha2 = "0.10"
ed25519-dalek = "2.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
test-case = "3.3"
pretty_assertions = "1.4" 